@@ -4,7 +4,7 @@ Data::SearchEngine::ElasticSearch - ElasticSearch support for Data::SearchEngine
 
 # VERSION
 
-version 0.14
+version 0.15
 
 # SYNOPSIS
 
@@ -105,7 +105,8 @@ is expected that you will populate these values in the item thusly:
 
 ## Filters
 
-If you set multiple filters they will be ANDed together.
+If you set multiple filters they will be ANDed together.  If you want to change
+this behavior then you can change the `filter_combiner` attribute to "or".
 
 ## Facets & Filters
 
@@ -113,6 +114,11 @@ If you use facets then any filters will be copied into the facet's
 `facet_filter` so that the facets are limited similarly to the results.
 
 # ATTRIBUTES
+
+## filter_combiner
+
+Boolean used to combine filters. Should be either "and" or "or". Defaults to
+and.
 
 ## servers
 
