@@ -1,6 +1,7 @@
 Revision history for Data-SearchEngine-ElasticSearch
 
 {{$NEXT}}
+  * Reverse the last change, turning it into a query() parameter.
 
 0.15 Dec 23 2011
   * Make filter_combiner attribute to allow configuration of filter combining
